--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@
 
 .main-frame {
   background-color: rgba(232, 244, 255, 0.774);
-  margin: 15px;
+  margin: 15px auto;
   box-shadow: 3px 10px 3px 4px rgba(0, 0, 0, 0.308);
   border-radius: 25px;
   border-style: solid;
-  border-color: rgba(0, 0, 0, 0.568);
+  border-color: rgba(4, 54, 94, 0.685);
   border-width: 2px;
 }
 body {
@@ -18,7 +18,7 @@ body {
   background-color: rgb(132, 136, 134);
   margin: 0 auto;
   text-align: center;
-  margin: 0;
+  padding: 0 15px;
 }
 a {
   color: rgb(4, 53, 94);
@@ -32,30 +32,83 @@ h2 {
   font-family: Lobster;
 }
 h1 {
-  font-size: 2em;
+  font-size: 1.7em;
 }
 h2 {
-  font-size: 1.3em;
+  font-size: 1.2em;
 }
 header {
   padding: 10px;
 }
 
 .photo img {
-  width: 350px;
-  border-radius: 15px;
+  width: 275px;
+  border-radius: 75px 0;
 }
 .flexbox {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10px 20px;
+  gap: 10px 10px;
+  padding: 0 5px 0 5px;
 }
 .attributes {
-  background-color: grey;
+  background-color: rgba(0, 91, 196, 0.26);
+  padding: 5px 5px;
+  border-radius: 15px 0;
+  border: rgba(0, 91, 196, 0.26) 1px solid;
+  font-size: 14px;
+}
+
+.attributes:hover {
+  background-color: white;
 }
 
 footer,
 p {
   margin-bottom: 0px;
+}
+
+@media (min-width: 500px) {
+  .photo img {
+    width: 430px;
+    border-radius: 115px 0;
+  }
+  h1 {
+    font-size: 2em;
+  }
+
+  h2 {
+    font-size: 1.4em;
+  }
+  .flexbox {
+    gap: 15px 22px;
+  }
+  .attributes {
+    font-size: 16px;
+    padding: 10px 10px;
+  }
+}
+
+@media (min-width: 800px) {
+  .photo img {
+    width: 700px;
+    border-radius: 150px 0;
+  }
+  h1 {
+    font-size: 2.5em;
+  }
+  h2 {
+    font-size: 1.6em;
+  }
+  .flexbox {
+    gap: 20px 30px;
+  }
+  .attributes {
+    font-size: 18px;
+    padding: 10px 10px;
+  }
+  .main-frame {
+    max-width: 1000px;
+  }
 }
