--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ header {
 }
 
 .attributes:hover {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .cv-flexbox {
@@ -77,10 +77,14 @@ header {
   border-radius: 15px 0;
   padding: 5px;
   width: 290px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .cv-block:hover {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 .study {
   background-color: rosybrown;
@@ -110,7 +114,15 @@ header {
 }
 
 .cv-block:hover .cv-job {
-  background-color: rgba(0, 0, 0, 0.295);
+  background-color: rgba(0, 0, 0, 0.151);
+}
+
+.get-in-touch img {
+  height: auto;
+  width: 220px;
+  border: solid 1px rgba(0, 91, 196, 0.26);
+  border-radius: 15px 0;
+  padding: 10px;
 }
 footer p {
   margin-bottom: 0px;
